--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,13 @@
     <header class="page-header">
       <div class="container header-container">
         <nav class="main-nav">
-          <a href="./index.html" class="logo">
-            <span class="logo-decoration">Web</span>Studio</a
-          >
+          <a href="./index.html" class="logo"> <span class="logo-decoration">Web</span>Studio</a>
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="link"> Студия</a>
+              <a href="./index.html" class="link active"> Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link active">Портфолио</a>
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
             <li class="item"><a href="/" class="link">Контакты</a></li>
           </ul>
@@ -41,7 +39,7 @@
           <li class="contact-nav-item">
             <a href="mailto:info@devstudio.com" class="contact-link">
               <svg class="contact-icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use>
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -49,7 +47,7 @@
           <li class="contact-nav-item">
             <a href="tel:+380961111111" class="contact-link">
               <svg class="contact-icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -88,11 +86,7 @@
             </li>
 
             <li class="item">
-              <img
-                src="./images/project2.jpg"
-                alt="Баскетболісти"
-                width="370"
-              />
+              <img src="./images/project2.jpg" alt="Баскетболісти" width="370" />
 
               <div class="project-content">
                 <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
@@ -101,11 +95,7 @@
             </li>
 
             <li class="item">
-              <img
-                src="./images/project3.jpg"
-                alt="Лого ресторану"
-                width="370"
-              />
+              <img src="./images/project3.jpg" alt="Лого ресторану" width="370" />
               <div class="project-content">
                 <h2 class="project-title">Ресторан Seafood</h2>
                 <p class="project-text">Приложение</p>
@@ -153,11 +143,7 @@
             </li>
 
             <li class="item">
-              <img
-                src="./images/project9.jpg"
-                alt="Ноутбук з руками людини"
-                width="370"
-              />
+              <img src="./images/project9.jpg" alt="Ноутбук з руками людини" width="370" />
               <div class="project-content">
                 <h2 class="project-title">Growing Business</h2>
                 <p class="project-text">Приложение</p>
@@ -177,9 +163,7 @@
             <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
 
             <div class="hookup">
-              <a href="mailto:info@example.com" class="contact"
-                >info@example.com</a
-              >
+              <a href="mailto:info@example.com" class="contact">info@example.com</a>
 
               <a href="tel:380991111111" class="contact">+38 099 111 11 11</a>
             </div>
@@ -190,30 +174,30 @@
           <h3 class="footer-icons-text">присоединяйтесь</h3>
           <ul class="social-list">
             <li class="social-list-item">
-              <a href="" class="social-link social-link-footer">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+              <a href="" class="social-link social-link-footer"
+                ><svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-link social-link-footer"
                 ><svg class="social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-link social-link-footer"
                 ><svg class="social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-link social-link-footer"
                 ><svg class="social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
