--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
     <header class="page-header">
       <div class="container header-container">
         <nav class="main-nav">
-          <a href="./index.html" class="logo">
-            <span class="logo-decoration">Web</span>Studio</a
-          >
+          <a href="./index.html" class="logo"> <span class="logo-decoration">Web</span>Studio</a>
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="link active"> Студия</a>
+              <a href="./index.html" class="link"> Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link active">Портфолио</a>
             </li>
             <li class="item"><a href="/" class="link">Контакты</a></li>
           </ul>
@@ -81,8 +79,7 @@
               </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="item">
@@ -93,8 +90,7 @@
               </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="item">
@@ -105,8 +101,7 @@
               </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="item">
@@ -117,8 +112,7 @@
               </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
           </ul>
@@ -129,11 +123,7 @@
         <h2 class="activity-title">Чем мы занимаемся</h2>
         <ul class="activity-list">
           <li class="item">
-            <img
-              src="images/box1.jpg"
-              alt="Процес розробки сайтів"
-              width="370"
-            />
+            <img src="images/box1.jpg" alt="Процес розробки сайтів" width="370" />
           </li>
           <li class="item">
             <img src="images/box2.jpg" alt="Презентація продукту" width="370" />
@@ -364,9 +354,7 @@
             <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
 
             <div class="hookup">
-              <a href="mailto:info@example.com" class="contact"
-                >info@example.com</a
-              >
+              <a href="mailto:info@example.com" class="contact">info@example.com</a>
 
               <a href="tel:380991111111" class="contact">+38 099 111 11 11</a>
             </div>
