--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@
           <a href="./index.html" class="logo"> <span class="logo-decoration">Web</span>Studio</a>
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="link active"> Студия</a>
+              <a href="./index.html" class="link"> Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link active">Портфолио</a>
             </li>
             <li class="item"><a href="/" class="link">Контакты</a></li>
           </ul>
