--- a/index.html
+++ b/index.html
@@ -366,28 +366,28 @@
           <ul class="social-list">
             <li class="social-list-item">
               <a href="" class="social-link social-link-footer"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="social-icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-link social-link-footer"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="social-icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-link social-link-footer"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="social-icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-link social-link-footer"
-                ><svg class="social-icon" width="20" height="20">
+                ><svg class="social-icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
